--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>萝卜墩儿</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no"/>
   <link rel="icon" type="image/x-icon" href="./static/img/favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico">
 
